# GIAIC-Second-Hackathon-Phase-1

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py  test_todo_app.py  todo_app.py
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-global-constitution.constitution.prompt.md
history/prompts/phase-i-todo/: 1-create-implementation-plan.plan.prompt.md  1-create-implementation-tasks.tasks.prompt.md  1-create-phase-i-spec.spec.prompt.md  1-implement-phase-i.todo.implement.prompt.md
specs/1-phase-i-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-phase-i-todo/checklists/: requirements.md
specs/1-phase-i-todo/contracts/: cli-operations.md
src/: main.py
src/cli/: menu.py
src/models/: task.py
src/services/: task_service.py
src/tests/integration/: test_integration.py
src/tests/unit/: test_cli.py  test_models.py  test_services.py
